change keytablename key/keyvalues to (tag_key/tag_value)